force-app/main/default/objects/Subscription__c/fields/Days_Of_Hold_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Days_Of_Hold_Allowed__c</fullName>
    <label>Days Of Hold Allowed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>