force-app/main/default/objects/Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( 
  AND(
   (Start_Date__c + Days_Of_Hold_Allowed__c) &gt;=  Returned_Date__c,
    NOT(ISNULL(Returned_Date__c))), 
    &apos;green&apos;, 
  IF( 
    AND(
     (Start_Date__c + Days_Of_Hold_Allowed__c)&gt;= TODAY(), 
     ISNULL(Returned_Date__c)),
     &apos;yellow&apos;, &apos;red&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>