force-app/main/default/objects/Subscription__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <description>Subscription ID</description>
    <displayFormat>SUB-{000000}</displayFormat>
    <label>Subscription ID</label>
    <type>AutoNumber</type>
</CustomField>