force-app/main/default/objects/Subscription__c/validationRules/BookHoldLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>BookHoldLimit</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Reader__r.Subscription_Type__c , &apos;VIP&apos;),  Days_Of_Hold_Allowed__c &gt; 365, Days_Of_Hold_Allowed__c &gt; 61)</errorConditionFormula>
    <errorMessage>The reader did not return the book in time.</errorMessage>
</ValidationRule>